--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGO_URI_ATLAS=mongodb+srv://Nabeel:PBpod0DW0YksU2O4@cluster0.8hou4.mongodb.net/gqlProject
+JWT_SECRET=6e7086e34a2d45397c4a26eb468265fc
 PORT=4000
