--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
     "graphql": "^15.5.1",
     "jsonwebtoken": "^8.5.1",
     "merge-graphql-schemas": "^1.7.8",
